--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -1,5 +1,7 @@
-<ion-view view-title="Search">
+<ion-view>
   <ion-content>
-    <h1>Search</h1>
+    <div class="row">
+        <div class="col"><h2>Available Requests</h2></div>
+     </div>
   </ion-content>
 </ion-view>
