--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -25,8 +25,14 @@
         <ion-item menu-close href="#/app/search">
           Browse
         </ion-item>
+        <ion-item menu-close href="#/app/create-profile">
+          Create a Profile
+        </ion-item>
         <ion-item menu-close href="#/app/playlists">
           My Requests
+        </ion-item>
+        <ion-item menu-close href="#/app/user-home">
+          user home
         </ion-item>
       </ion-list>
     </ion-content>
