--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,5 +1,5 @@
 <ion-view>
-  <ion-content>
+  <ion-content ng-controller="homeCtrl">
     <div class="row">
       <div class="col text-center">
         <h1>Welcome to Material Supply Hub.</h1>
@@ -29,26 +29,20 @@
   </ion-slide-box>
         </div>
         <div class="col col-30"> 
-            <form> 
-              <fieldset>
-                <h2>Login</h2>
-                  <div class="list">
-                    <label class="item item-input">
-                      <span class="input-label">Username</span>
-                      <input type="text">
-                    </label>
-                    <label class="item item-input">
-                      <span class="input-label">Password</span>
-                      <input type="password">
-                    </label>
-                  </div>
-                  <button class="button button-block button-positive">
-                    Login
-                  </button>
-              </fieldset>
-            </form>
-            <br />
-            <p class="text-center">Not a member? <a hef="#">Create a profile</a>.
+          <h2>Login</h2>
+            <p>
+              Existing users please login.
+            </p>
+            <button class="button button-block button-positive" ng-click="login()">
+              Login
+            </button>
+            <h3>Not a member?</h3>
+              <ion-item menu-close href="#/app/create-profile">
+                Create a profile <i class="ion-chevron-right"></i>
+              </ion-item>
+              <ion-item menu-close href="#/app/about">
+                Learn more about MSH <i class="ion-chevron-right"></i>
+              </ion-item>
         </div>
         <div class="col col-10"></div>
      </div>
