- added logic to menu to show different states based on login/logou
- added logout method
- added placeholder data to logged in home page state

--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -1,7 +1,7 @@
 <ion-view>
     <ion-content>
         <div class="row">
-            <div class="col">User Profile</div>
+            <div class="col"><h2>My Profile</h2></div>
         </div>
         <div class="row">
             <div class="col col-75"></div>
