--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -15,11 +15,12 @@
   <ion-side-menu side="left">
     <ion-header-bar class="bar-stable"></ion-header-bar>
     <ion-content>
-      <ion-list> 
+      <!-- logged out menu -->
+      <ion-list ng-show="!state.loggedIn == true"> 
         <ion-item menu-close href="#/app/home">
           Home
         </ion-item>
-        <ion-item menu-close ng-click="login()">
+        <ion-item menu-close ng-click="login()" ng-show="!state.loggedIn == true">
           Login
         </ion-item>
         <ion-item menu-close href="#/app/search">
@@ -27,13 +28,20 @@
         </ion-item>
         <ion-item menu-close href="#/app/create-profile">
           Create a Profile
-        </ion-item>
-        <ion-item menu-close href="#/app/playlists">
-          My Requests
-        </ion-item>
+      </ion-list>
+      <!-- logged in menue -->
+      <ion-list ng-show="state.loggedIn == true"> 
         <ion-item menu-close href="#/app/user-home">
-          user home
+          Home
         </ion-item>
+        <ion-item menu-close ng-click="logout()">
+          Logout
+        </ion-item>
+        <ion-item menu-close href="#/app/search">
+          Browse
+        </ion-item>
+        <ion-item menu-close href="#/app/profile">
+          My Profile
       </ion-list>
     </ion-content>
   </ion-side-menu>
