--- a/www/templates/create-profile.html
+++ b/www/templates/create-profile.html
@@ -1,21 +1,23 @@
 <ion-view>
+    
   <ion-content>
     <div class="row">
         <div class="col"><h2>Create a Profile</h2></div>
-     </div>
-     <form ng-submit="createProfile()">
+     </div>  
      <div class="row">
         <div class="col col-50"> 
+        
+        <form ng-submit="createProfile(profile)">
                 <fieldset>
                     <legend>User Information</legend>
                     <div class="list">
                         <label class="item item-input">
                         <span class="input-label">Username</span>
-                        <input type="text" ng-model="loginData.username">
+                        <input type="text" ng-model="profile.username">
                         </label>
                         <label class="item item-input">
                         <span class="input-label">Password</span>
-                        <input type="password" ng-model="loginData.password">
+                        <input type="password" ng-model="profile.password">
                         </label>
                     </div>
                 </fieldset>
@@ -24,23 +26,23 @@
                         <div class="list">
                             <label class="item item-input">
                             <span class="input-label">Comnpany Name</span>
-                            <input type="text">
+                            <input type="text" ng-model="profile.companyName">
                             </label>
                             <label class="item item-input">
                             <span class="input-label">Address</span>
-                            <input type="text">
+                            <input type="text" ng-model="profile.address1">
                             </label>
                             <label class="item item-input">
                             <span class="input-label">Address 2</span>
-                            <input type="text">
+                            <input type="text" ng-model="profile.address2">
                             </label>
                             <label class="item item-input">
                             <span class="input-label">City</span>
-                            <input type="text">
+                            <input type="text" ng-model="profile.city">
                             </label>
                             <label class="item item-input">
                             <span class="input-label">State</span>
-                            <select>
+                            <select ng-model="profile.state">
                             <option>Alabama</option>
                             <option>Alaska</option>
                             <option>...</option>
@@ -48,7 +50,7 @@
                             </label>
                             <label class="item item-input">
                             <span class="input-label">ZIP</span>
-                            <input type="text">
+                            <input type="text" ng-model="profile.zip">
                             </label>
                         </div>
                 </fieldset>
@@ -69,13 +71,23 @@
                             </label>
                         </div>
                 </fieldset>
+                <fieldset>
                     <div class="list">
                         <label>
                         <button class="button button-block button-positive" type="submit">Create Profile</button>
                         </label>
                     </div>
+                </fieldset><
+
+                    <div class="list">
+                        
+                    </div>
+                <br />
              </div>
+            </form>
          </div>
-     </form>
+  
+  
   </ion-content>
+
 </ion-view>
