--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -7,7 +7,10 @@
       <ion-nav-buttons side="left">
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
         </button>
+        
       </ion-nav-buttons>
+      <ion-nav-buttons side="right">
+        <button class="button button-dark button-clear" ng-click="profileLink()"><i class="icon ion-person"></i> {{ userName }}</button>
     </ion-nav-bar>
     <ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
