--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -1,10 +1,41 @@
 <ion-view>
-    <ion-content>
-        <div class="row">
-            <div class="col"><h2>My Profile</h2></div>
+    <ion-content ng-controller="profileCtrl">
+        <div ng-if="state.loggedIn == !true">
+            <div class="row">
+                <div class="col col-50">
+                <p>You have logged out. Please login to view your profile.</p>
+                <h2>Not a member?</h2>
+               <p>
+                   <ion-item menu-close href="#/app/create-profile">
+                Create a profile <i class="ion-chevron-right"></i>
+              </ion-item>
+              </p>
+              </div>
+            </div>
         </div>
-        <div class="row">
-            <div class="col col-75"></div>
+        <div ng-if="state.loggedIn == true">
+            <div class="row">
+                <div class="col"><h2>My Profile</h2></div>
+            </div>
+            <div class="row">
+                <div class="col col-75">
+                    <h3>Company</h3>
+                    <p>{{ profile.company }}</p>
+                    <p>{{ profile.address1 }}</p>
+                    <p>{{ profile.address2 }}</p>
+                    <p>{{ profile.city }}, {{ profile.state }} {{ profile.zip }}</p>
+                    <br />
+                    <h3>Account Info</h3>
+                    <p><strong>Username</strong></p>
+                    <p>{{ userName }}</p>
+                </div>
+                <div>
+                    <h3>Contact Info</h3>
+                    <p>{{ profile.firstName }} {{ profile.lastName }}</p>
+                    <p>{{ profile.phone }}</p>
+                    <p>{{ profile.email }}</p>
+                </div>
+            </div>
         </div>
     <ion-content>
 <ion-view>
