added link to about page from the logged out menu

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -31,6 +31,10 @@
         </ion-item>
         <ion-item menu-close href="#/app/create-profile">
           Create a Profile
+        </ion-item>
+        <ion-item menu-close href="#/app/about">
+          About MSH
+        </ion-item>
       </ion-list>
       <!-- logged in menue -->
       <ion-list ng-show="state.loggedIn == true"> 
@@ -45,6 +49,7 @@
         </ion-item>
         <ion-item menu-close href="#/app/profile">
           My Profile
+          </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
