1. started building the request view and data model for it - filtering is not yet enabled to all requests will show on the request results regardless of what category you select
2. added logic to profile/create profile page to show proper logged in states
4 moved requests and categories to a service instead of a controller
5. updated logged in state to keep the user on the page they are currently viewing

--- a/www/templates/create-profile.html
+++ b/www/templates/create-profile.html
@@ -1,6 +1,7 @@
 <ion-view>
     
   <ion-content>
+    <div  ng-if="state.loggedIn == !true">
     <div class="row">
         <div class="col"><h2>Create a Profile</h2></div>
      </div>  
@@ -86,6 +87,15 @@
              </div>
             </form>
          </div>
+        </div>
+        <div ng-if="state.loggedIn == true">
+            <div class="row">
+                <div class="col">
+                    <h2>Welcome back, {{profile.username}}</h2>
+                    Click <a href="#/app/profile">here</a> to view your profile
+                </div>
+            </div>
+        </div>
   
   
   </ion-content>
