--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -1,5 +1,5 @@
 <ion-view>
-    <ion-content ng-controller="profileCtrl">
+    <ion-content>
         <div ng-if="state.loggedIn == !true">
             <div class="row">
                 <div class="col col-50">
