added create proposal and proposal-item views and controllers

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -36,7 +36,7 @@
           About MSH
         </ion-item>
       </ion-list>
-      <!-- logged in menue -->
+      <!-- logged in menu -->
       <ion-list ng-show="state.loggedIn == true"> 
         <ion-item menu-close href="#/app/user-home">
           Home
@@ -46,6 +46,9 @@
         </ion-item>
         <ion-item menu-close href="#/app/search">
           Browse
+        </ion-item>
+        <ion-item menu-close href="#/app/create-proposal">
+          Create a Proposal
         </ion-item>
         <ion-item menu-close href="#/app/profile">
           My Profile
