--- a/www/templates/review-proposal.html
+++ b/www/templates/review-proposal.html
@@ -3,7 +3,7 @@
     <form>
     <div class="row">
       <div class="col col-100">    
-        <h1>Create a New Proposal</h1>
+        <h1>Review Proposal</h1>
         </div>
     </div>
     <div class="row">
@@ -11,37 +11,32 @@
             <h3>Details</h3>
                   <label for="proposal-title">
                     <span class="input-label">Proposal Title</span>
-                     <input type="text" ng-model="proposal.title" name="proposal-title" id="proposal-title">
+                     <input type="text" ng-model="proposal.title" name="proposal-title" id="proposal-title">{{proposal.title}}
                     </label>
                     <label for="proposal-description">
                         <span class="input-label">Description</span>
-                        <textarea name="proposal-description" id="proposal-description" ng-model="proposal.description"></textarea>
+                        <textarea name="proposal-description" id="proposal-description" ng-model="proposal.description">{{proposal.description}}</textarea>
                     </label>
                      <label for="request-due-date">
                         <span class="input-label">Due Date</span>
-                        <input type="date" vname="proposal-due-date" id="proposal-due-date" ng-model="proposal.dueDate">
+                        <input type="date" vname="proposal-due-date" id="proposal-due-date" ng-model="proposal.dueDate">{{proposal.dueDate}}
                     </label>
                      <label for="request-po-number">
                         <span class="input-label">PO Number</span>
-                        <input type="number" vname="proposal-po-number" id="proposal-po-number" ng-model="proposal.poNumber">
+                        <input type="number" vname="proposal-po-number" id="proposal-po-number" ng-model="proposal.poNumber">{{proposal.poNumber}}
                     </label>
         </div>
     </div>
     <div class="row">
         <div class="col"><h3>Items</h3></div>
     </div>
-    <div id="items" ng-include="template.url"></div>
     <div class="row">
-                <div class="col">
-                    <section>
-                        <button class="button button-block button-stable" ng-click="addItem()">Add Item</button>
-                    </section>
-                </div>
-        </div>
-        <div class="row lastRow">
+        <div class="col">{{proposal.items}}</div>
+    </div>
+        <div class="row">
             <div class="col">
                 <section>
-                    <button class="button button-block button-positive" ng-click="createProposal()">Review and Submit</button>
+                    <button class="button button-block button-positive" ng-click="createProposal()">Submit Proposal</button>
                 </section>
             </div>
         </div>
