--- a/www/templates/create-profile.html
+++ b/www/templates/create-profile.html
@@ -20,6 +20,13 @@
                         <span class="input-label">Password</span>
                         <input type="password" ng-model="profile.password">
                         </label>
+                        <label class="item item-input">
+                        <span class="input-label">Profile Type</span>
+                        <select> 
+                            <option>Manufacturer</option>
+                            <option>Supplier</option>
+                        </select>
+                        </label>
                     </div>
                 </fieldset>
                 <fieldset>
