--- a/www/templates/request.html
+++ b/www/templates/request.html
@@ -11,7 +11,7 @@
         <h3>{{request.company}}</h3>
         <dl>
           <dt>Contact</dt>
-          <dd>{{request.contact}}</dd>
+          <dd><img src={{request.face}} class="request-avatar" /> {{request.contact}}</dd>
         </dl>
         <dl>
           <dt>Summary:</dt>
